syntax = "proto3";

option java_package = "proto";

service FileService {
    rpc Upload(UploadRequest) returns (UploadResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc Rename(RenameRequest) returns (RenameResponse);
    rpc Download(DownloadRequest) returns (DownloadResponse);
}

message UploadRequest {
    string file_name = 1;
    bytes file_data = 2;
}

message UploadResponse {
    string message = 1;
}

message DeleteRequest {
    string file_name = 1;
}

message DeleteResponse {
    string message = 1;
}

message RenameRequest {
    string old_file_name = 1;
    string new_file_name = 2;
}

message RenameResponse {
    string message = 1;
}

message DownloadRequest {
    string file_name = 1;
}

message DownloadResponse {
    string file_name = 1;
    bytes file_data = 2;
}
